--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mysql2": "^3.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
