--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mysql2": "^3.6.2",
