--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-amplify": "^6.4.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "moment": "^2.29.4",
@@ -20,12 +21,12 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack ....",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
