--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frazer-garland-cottage",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://garrettanderson.github.io/frazer-garland-cottage",
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
