--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Frazer-Garland Cottage",
   "icons": [
     {
       "src": "favicon.ico",
