--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frazer-garland-cottage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://garrettanderson.github.io/frazer-garland-cottage",
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "^0.2.0",
